# RoboSim5G

./: .clang-format  .gitignore  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Coding Guidelines.md  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration-test.yml
core_network_setup/free5gc/: wait_for_core_network.sh
core_network_setup/oai/database/: oai_db.sql
core_network_setup/open5gs/: docker-compose.yml
core_network_setup/open5gs/scripts/: add_ue_subscriber.sh
demo/: .gitignore  README.md  build_images.sh  dds.xml  external.env  kill.sh  kill_all.sh  kill_all_free5gc.sh  kill_all_open5gs.sh  launch.sh  launch_robot_5G.sh  launch_robot_5G_free5gc.sh  launch_robot_5G_open5gs.sh  start_CN-set_env.sh  world-file.sdf
demo/free5gc_setup/: README.md  docker-compose-gNB.yml  docker-compose-ue.yml
demo/free5gc_setup/free5gc/: mongorestore.sh
demo/free5gc_setup/oai/: UE_config.yaml  gNB_config.yaml
demo/images/dds_discovery_server/: Dockerfile
demo/images/rcc/: Dockerfile  dds.xml  wait_for_nav_stack.sh
demo/oai/: docker-compose-gNB.free5gc.yml  docker-compose-gNB.yml  docker-compose-ue.yml
demo/oai_setup/: docker-compose-gNB.yml  docker-compose-ue.yml  docker-compose.yml  wait_for_core_network.sh
demo/open5gs_setup/: README.md  docker-compose-gNB.yml  docker-compose-ue.yml  wait_for_core_network.sh
demo_containerized/: README.md  build_images.sh  external.env  kill.sh  kill_all_free5gc.sh  kill_all_open5gs.sh  launch.sh  launch_robot_5G_docker.sh  launch_robot_5G_docker_free5gc.sh  launch_robot_5G_docker_open5gs.sh
demo_containerized/free5gc_setup/: create_physical_bridge.sh  docker-compose-ue.yml  docker-compose.yml  wait_for_core_network.sh
demo_containerized/oai/: docker-compose-gNB.free5gc.yml  docker-compose-gNB.yml  docker-compose-ue.yml  sensor_reader.py
demo_containerized/oai_setup/: README.md  docker-compose-gNB.yml  docker-compose-ue.yml
demo_containerized/open5gs/: create_physical_bridge.sh  docker-compose-ue.yml
demo_containerized/open5gs_setup/: docker-compose-gNB.yml
doc/: 5G_CORE_NETWORKS.md
model_folder/phine_gNB/: model.config  model.sdf
phine-plugins/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
phine-plugins/src/phine_plugins/: CMakeLists.txt  package.xml
phine-plugins/src/phine_plugins/src/: NetworkMonitor.cc  NetworkMonitor.hh  NetworkMonitor.qml  NetworkMonitor.qrc  RS5G_plugins.cc  RS5G_plugins.hh  UE_plugin.cc  UePowerPlugin.cc  UePowerPlugin.hh  UePowerPlugin.qml  UePowerPlugin.qrc  aux_functions.cc  aux_functions.hh  gNBPowerPlugin.cc  gNBPowerPlugin.hh  gNBPowerPlugin.qml  gNBPowerPlugin.qrc  gNB_plugin.cc
tests/integration/: check_registration.sh  docker-compose-test-simulation.yml
(+132 files in other folders)
